adding styles and config form

--- a/user_theming.info.yml
+++ b/user_theming.info.yml
@@ -1,8 +1,8 @@
 name: User Theming
 type: module
 description: 'Creates usable views blocks of users. Provides user template files and styling. '
-package: Prototype
+package: 'Prototype Suite'
 core: 8.x
 hidden: false
 dependencies:
-  - prototype_base
+  - user
