--- a/user_theming.routing.yml
+++ b/user_theming.routing.yml
@@ -2,6 +2,6 @@ user_theming.settings:
   path: '/admin/config/user-theming'
   defaults:
     _form: '\Drupal\user_theming\Form\UserThemingConfigurationForm'
-    _title: 'User Theming Module Configuration'
+    _title: '<em>User Theming</em> Module Configuration'
   requirements:
     _permission: 'administer site configuration'
