updating routing and links

--- a/user_theming.links.menu.yml
+++ b/user_theming.links.menu.yml
@@ -1,6 +1,13 @@
-user_theming.admin:
-  title: 'User Theming Module Configuration'
-  parent: system.admin_config_system
+user_theming.settings:
+  title: 'User Theming'
+  parent: prototype_suite.group.admin
   description: 'Configuration settings for the "User Theming" module. '
   route_name: user_theming.settings
   weight: -100
+  
+prototype_suite.group.admin:
+  title: 'Prototype Suite'
+  route_name: system.admin_config_prototype_suite
+  parent: system.admin_config
+  description: 'Prototype Suite Configuration'
+  weight: -999
