--- a/user_theming.routing.yml
+++ b/user_theming.routing.yml
@@ -1,7 +1,17 @@
 user_theming.settings:
-  path: '/admin/config/user-theming'
+  path: '/admin/config/prototype-suite/user-theming'
   defaults:
     _form: '\Drupal\user_theming\Form\UserThemingConfigurationForm'
     _title: '<em>User Theming</em> Module Configuration'
   requirements:
     _permission: 'administer site configuration'
+  options:
+    _admin_route: TRUE
+    
+system.admin_config_prototype_suite:
+  path: '/admin/config/prototype-suite'
+  defaults:
+    _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
+    _title: 'Prototype Suite'
+  requirements:
+    _permission: 'access administration pages'
