--- a/config/install/field.storage.user.user_last_name.yml
+++ b/config/install/field.storage.user.user_last_name.yml
@@ -3,8 +3,8 @@ status: true
 dependencies:
   module:
     - user
-id: user.field_user_title
-field_name: field_user_title
+id: user.user_last_name
+field_name: user_last_name
 entity_type: user
 type: string
 settings:
