--- a/config/install/field.field.user.user.user_first_name.yml
+++ b/config/install/field.field.user.user.user_first_name.yml
@@ -2,18 +2,18 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.user.field_user_bio
+    - field.storage.user.user_first_name
   module:
     - user
-id: user.user.field_user_bio
-field_name: field_user_bio
+id: user.user.user_first_name
+field_name: user_first_name
 entity_type: user
 bundle: user
-label: 'User Bio'
+label: 'User First Name'
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string_long
+field_type: string
