--- a/config/install/field.field.user.user.user_last_name.yml
+++ b/config/install/field.field.user.user.user_last_name.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.user.field_user_title
+    - field.storage.user.user_last_name
   module:
     - user
-id: user.user.field_user_title
-field_name: field_user_title
+id: user.user.user_last_name
+field_name: user_last_name
 entity_type: user
 bundle: user
-label: 'User Title'
+label: 'User Last Name'
 description: ''
 required: false
 translatable: false
