--- a/config/install/field.storage.user.user_title.yml
+++ b/config/install/field.storage.user.user_title.yml
@@ -3,8 +3,8 @@ status: true
 dependencies:
   module:
     - user
-id: user.field_user_first_name
-field_name: field_user_first_name
+id: user.user_title
+field_name: user_title
 entity_type: user
 type: string
 settings:
