--- a/user_theming.info.yml
+++ b/user_theming.info.yml
@@ -5,5 +5,7 @@ package: 'Prototype Suite'
 core: 8.x
 hidden: false
 dependencies:
+  - better_exposed_filters
+  - token
   - user
 configure: user_theming.settings
