--- a/config/install/core.entity_view_display.user.user.inline_grid.yml
+++ b/config/install/core.entity_view_display.user.user.inline_grid.yml
@@ -3,11 +3,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.inline_grid
+    - field.field.user.user.user_dob
     - field.field.user.user.user_bio
     - field.field.user.user.user_first_name
     - field.field.user.user.user_last_name
-    - field.field.user.user.user_title
     - field.field.user.user.user_picture
+    - field.field.user.user.user_title
     - image.style.user_inline_grid
   module:
     - image
@@ -17,14 +18,6 @@ targetEntityType: user
 bundle: user
 mode: inline_grid
 content:
-  user_first_name:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   user_picture:
     type: image
     weight: 0
@@ -32,10 +25,12 @@ content:
     label: hidden
     settings:
       image_style: user_inline_grid
-      image_link: ''
+      image_link: content
     third_party_settings: {  }
 hidden:
+  user_dob: true
+  member_for: true
   user_bio: true
+  user_first_name: true
   user_last_name: true
   user_title: true
-  member_for: true
